--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -16,21 +16,42 @@
     <thead>
       <tr>
         <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
+        <th>Age</th>
+        <th>Nationality</th>
       </tr>
     </thead>
+    <tr *ngIf="isEdit">
+        <td><input class="form-control col-10" type="text" [(ngModel)]="selectedStudent.name" name="name"></td>
+        <td><input class="form-control col-10" type="text" [(ngModel)]="selectedStudent.age" name="name"></td>
+        <td><input class="form-control col-10" type="text" [(ngModel)]="selectedStudent.nationality" name="name"></td>
+        <td><button (click)="update(selectedStudent.$key)" type="button" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Save
+          </button></td>
+        <td><button (click)="cancel()" type="button" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel
+          </button></td>
+
+      </tr>
     <tbody *ngFor="let item of items| async">
+
       <tr>
         <td>{{item.name}}</td>
         <td>{{item.age}}</td>
-        <td>{{item.nationality}}</td>
+        <td>{{item.nationality}} </td>
+
+        <td>
+            <button type="button" (click)="edit(item, item.$key)" class="btn btn-default btn-lg">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+              </button>
+        </td>
+        <td>
+        <button (click)="remove(item.$key)" type="button" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Remove
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
-  <!-- <span class="name">{{item.name}} </span>
-  <span class="age">{{item.age}}</span>
-  <span class="nationality">{{item.nationality}}</span> -->
 </div>
 <div [hidden]="isAdd">
   <add-student (onAddedStudent)="onAddedStudent($event)"></add-student>
