--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,13 +28,11 @@
 
 
 <nav class="navbar">
-  <div class="logo">
-    <img src="http://placehold.it/50/50" alt= "image here">
-  </div>
+
   <div class="menu" >
     <ul >
       <li >
-        <a [routerLink]="['/student']" >Students <span class="sr-only">(current)</span></a>
+        <a [routerLink]="['/students']" >Students <span class="sr-only">(current)</span></a>
       </li>
       <li >
         <a  [routerLink]="['/payments']">Payments</a>
