--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,10 +1,10 @@
 <div>
   <ul class="nav navbar-dark bg-dark">
     <li class="nav-item">
-      <a class="nav-link active" [routerLink]="['/studentList']" href="#">List of Students</a>
+      <a class="nav-link active" [routerLink]="['/students/list']" href="#">List of Students</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/add']" href="#">Add Student</a>
+      <a class="nav-link" [routerLink]="['/students/add']" href="#">Add Student</a>
     </li>
   </ul>
 </div>
@@ -14,9 +14,9 @@
 </div> -->
 <div class="container">
   <div class="jumbotron">
-    <h1>Welcome in Students Module Feature</h1>
+    <h1>Welcome to Students Module Feature</h1>
     <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser's viewport.</p>
-    <a class="btn btn-lg btn-primary" [routerLink]="['/studentList']" role="button">Go To Students List</a>
+    <a class="btn btn-lg btn-primary" [routerLink]="['/students/list']" role="button">Go To Students List</a>
   </div>
 </div>
 
