--- a/src/app/components/student/student-list-component/student-list-component.component.html
+++ b/src/app/components/student/student-list-component/student-list-component.component.html
@@ -13,7 +13,7 @@
         <td><input class="form-control col-10" type="text" [(ngModel)]="selectedStudent.name" (keydown)="update(selectedStudent.$key ,$event)" name="name"></td>
         <td><input class="form-control col-10" type="text" [(ngModel)]="selectedStudent.age" (keydown)="update(selectedStudent.$key ,$event)" name="name"></td>
         <td><input class="form-control col-10" type="text" [(ngModel)]="selectedStudent.nationality" (keydown)="update(selectedStudent.$key , $event)" name="name"></td>
-        <td><button (click)="update(selectedStudent.$key)"  type="button" class="btn btn-default btn-lg">
+        <td><button (click)="update(selectedStudent.$key, null)"  type="button" class="btn btn-default btn-lg">
           <i class="fa fa-floppy-o" aria-hidden="true"></i> Save
           </button></td>
         <td>
@@ -25,7 +25,7 @@
 
 
       </tr>
-    <tbody *ngFor="let item of items| async">
+    <tbody *ngFor="let item of items">
 
       <tr>
         <td>{{item.name}}</td>
